--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "angular-progress-bar": "^1.0.11",
     "bootstrap": "^5.1.1",
     "cors": "^2.8.5",
     "jquery": "^3.6.0",
