--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.2.0",
     "@azure/msal-angular": "^2.0.5",
     "@azure/msal-browser": "^2.19.0",
+    "angular-glass": "^1.0.1",
     "angular-progress-bar": "^1.0.11",
     "bootstrap": "^5.1.1",
     "cors": "^2.8.5",
