--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/localize": "~12.2.0",
     "@angular/material": "^12.2.13",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@azure/msal-angular": "^2.0.5",
     "@azure/msal-browser": "^2.19.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "angular-glass": "^1.0.1",
     "angular-progress-bar": "^1.0.11",
     "bootstrap": "^5.1.1",
