--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-glass": "^1.0.1",
     "angular-progress-bar": "^1.0.11",
     "bootstrap": "^5.1.1",
+    "bootstrap-icons": "^1.7.1",
     "cors": "^2.8.5",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^7.0.0",
