--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "@azure/msal-angular": "^2.0.5",
     "@azure/msal-browser": "^2.19.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@nguniversal/express-engine": "^13.0.1",
     "angular-glass": "^1.0.1",
     "angular-progress-bar": "^1.0.11",
     "bootstrap": "^5.1.1",
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^7.0.0",
-    "ngx-cookie-service": "^13.0.1",
+    "ngx-cookie-service": "^13.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
@@ -40,6 +42,7 @@
     "@angular-devkit/build-angular": "^12.2.12",
     "@angular/cli": "~12.2.5",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/express": "^4.17.13",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
