--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@azure/msal-angular": "^2.0.5",
     "@azure/msal-browser": "^2.19.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@nguniversal/express-engine": "^13.0.1",
     "angular-glass": "^1.0.1",
     "angular-progress-bar": "^1.0.11",
     "bootstrap": "^5.1.1",
