--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,6 +9,7 @@ on:
     branches: 
         - ci-cd
         - Development
+        - MergeRepoBranch
     path: "FrontEnd/**"
   pull_request:
     branches: [ main, Development ]
@@ -36,7 +37,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: FrontEnd/
+          context: 'FrontEnd/'
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/taxmodelfrontend:latest
