--- a/BackEnd/TaskService/Dockerfile
+++ b/BackEnd/TaskService/Dockerfile
@@ -7,7 +7,7 @@ EXPOSE 443
 COPY *.csproj ./
 RUN dotnet restore
 
-COPY . ../.
+COPY ../. /.
 RUN dotnet publish -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/aspnet:3.1
