--- a/BackEnd/TaskService/Dockerfile
+++ b/BackEnd/TaskService/Dockerfile
@@ -4,10 +4,10 @@ WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-COPY *.csproj ./
+COPY back-end.csproj ./
 RUN dotnet restore
 
-COPY ../. /.
+COPY . ./
 RUN dotnet publish -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/aspnet:3.1
