--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,10 +10,10 @@ on:
         - ci-cd
         - Development
         - MergeReposBranch
-    path: [ "FrontEnd/**" ]
+    path: [ FrontEnd/** ]
   pull_request:
     branches: [ main, Development ]
-    path: "FrontEnd/**"
+    path: [ FrontEnd/** ]
 
 jobs:
   build:
