--- a/BackEnd/TaskService/back-end.csproj
+++ b/BackEnd/TaskService/back-end.csproj
@@ -20,5 +20,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 
 </Project>
