--- a/BackEnd/AchievementService/appsettings.json
+++ b/BackEnd/AchievementService/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=mssql.fhict.local;Database=dbi362569_TaxModel;User Id=dbi362569_TaxModel;Password=Adminadmin;"
+    "Default": "Server=mssqlstud.fhict.local;Database=dbi452774;User Id=dbi452774;Password=0nBoardifyTeam2;"
   }
 }
