--- a/BackEnd/User Back-End/appsettings.json
+++ b/BackEnd/User Back-End/appsettings.json
@@ -8,6 +8,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "Default": "Server=mssqlstud.fhict.local;Database=dbi452774;User Id=dbi452774;Password=0nBoardifyTeam2;"
+  },
+
+  "ConnectionStringold": {
     "Default": "Server=mssql.fhict.local;Database=dbi362569_TaxModel;User Id=dbi362569_TaxModel;Password=Adminadmin;"
   }
 }
