Tried to use ORM properly
Ik heb geprobeerd om de relaties tussen de tabellen op een fatsoenlijke manier in het ORM te zetten. Tijdens deze actie zijn ik en Sjoerd erachter gekomen dat door de scheiding van het ORM je niet relaties kan aangeven in de code

--- a/BackEnd/TaskService/back-end.csproj
+++ b/BackEnd/TaskService/back-end.csproj
@@ -24,5 +24,9 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\User Back-End\User Back-End.csproj" />
+  </ItemGroup>
+
 
 </Project>
