Updated GitIgnore for Rider IDEA

--- a/BackEnd/AchievementService/ProgressionService.csproj
+++ b/BackEnd/AchievementService/ProgressionService.csproj
@@ -20,5 +20,9 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Migrations\20220317104953_IntializeProgression.Designer.cs" />
+  </ItemGroup>
+
 
 </Project>
