--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -27,6 +27,7 @@
     "@nguniversal/express-engine": "^13.0.1",
     "angular-glass": "^1.0.1",
     "angular-progress-bar": "^1.0.11",
+    "angular2-qrcode": "^2.0.3",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "cors": "^2.8.5",
