Generates User QR code, dynamically

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /BackEnd/.idea/.idea.back-end/.idea/indexLayout.xml
 /BackEnd/TaskService/Migrations/QuestContextModelSnapshot.cs
 /BackEnd/.idea/.idea.back-end/.idea/vcs.xml
+/BackEnd/.idea/.idea.back-end/.idea/workspace.xml
