--- a/BackEnd/User Back-End/User Back-End.csproj
+++ b/BackEnd/User Back-End/User Back-End.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+	  <InternalsVisibleTo Include="MyTestProject" />
   </ItemGroup>
 
 </Project>
