print en download functie QR code klaar voor review

--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -32,8 +32,10 @@
     "bootstrap-icons": "^1.8.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
     "jquey": "^0.0.1-security",
+    "jspdf": "^2.5.1",
     "ngx-bootstrap": "^7.0.0",
     "ngx-cookie-service": "^13.1.2",
     "popper.js": "^1.16.1",
