Added Primary key for quest Usermanagement

--- a/BackEnd/User Back-End/User Back-End.csproj
+++ b/BackEnd/User Back-End/User Back-End.csproj
@@ -24,4 +24,8 @@
 	  <InternalsVisibleTo Include="MyTestProject" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
