--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches: [ main, Development ]
     path: ["BackEnd/**"]
+  workflow_dispatch:
+    path: ["BackEnd/**"]
 
 jobs:
   build:
