77 containerizing services docker (#83)
* Delete main_onboardify.yml

* Update dotnet.yml

* Update dotnet.yml

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,6 +7,18 @@ on:
   pull_request:
     branches: [ main, Development ]
     path: ["BackEnd/**"]
+  workflow_dispatch:
+    inputs:
+        logLevel:
+          description: 'Log level'     
+          required: true
+          default: 'warning' 
+          type: choice
+          options:
+          - info
+          - warning
+          - debug 
+      
 
 jobs:
   build:
