--- a/FrontEnd/tsconfig.json
+++ b/FrontEnd/tsconfig.json
@@ -26,6 +26,7 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "noFallthroughCasesInSwitch": true,
   }
 }
