--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -80,7 +80,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: 'BackEnd/User Back-End/'
+          context: "BackEnd/User Back-End/"
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/taxmodel-user-service:latest
 
