renamed user backend again

--- a/BackEnd/TestProject/TestProject.csproj
+++ b/BackEnd/TestProject/TestProject.csproj
@@ -23,7 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TaskService\back-end.csproj" />
-    <ProjectReference Include="..\User Back-End\User Back-End.csproj" />
+    <ProjectReference Include="..\User Back-End\User-Back-End.csproj" />
   </ItemGroup>
 
 </Project>
