--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -34,6 +34,7 @@
     "angular2-qrcode": "^2.0.3",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "canvas-confetti": "^1.5.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "html2canvas": "^1.4.1",
