--- a/FrontEnd/Dockerfile
+++ b/FrontEnd/Dockerfile
@@ -1,5 +1,5 @@
 #when running container make sure to set port to: anynumber:4200 
-FROM node:16.13.2-alpine as build-step
+FROM node:14.17.6-alpine as build-step
 RUN apk update && apk add bash
 RUN mkdir -p /app
 WORKDIR /app
@@ -9,7 +9,7 @@ COPY . /app
 RUN npm run build
 
 
-FROM nginx:stable-alpine as production-stage
+FROM node:14.17.6-alpine as production-stage
 COPY --from=build-step /app/dist /usr/share/nginx/html
 WORKDIR /usr/share/nginx/html
 EXPOSE 4200
