--- a/FrontEnd/Dockerfile
+++ b/FrontEnd/Dockerfile
@@ -13,4 +13,5 @@ FROM node:14.17.6-alpine as production-stage
 COPY --from=build-step /app/dist /usr/share/nginx/html
 WORKDIR /usr/share/nginx/html
 EXPOSE 4200
+RUN dir
 CMD ["npm", "start"]
