--- a/FrontEnd/Dockerfile
+++ b/FrontEnd/Dockerfile
@@ -9,9 +9,7 @@ COPY . /app
 RUN npm run build
 
 
-FROM node:14.17.6-alpine as production-stage
-COPY --from=build-step /app/dist /usr/share/nginx/html
-COPY --from=build-step /app/package.json /usr/share/nginx/html
-WORKDIR /usr/share/nginx/html
+FROM nginx:stable-alpine as production-stage
+COPY --from=build-stage /app/dist /usr/share/nginx/html
 EXPOSE 4200
-CMD ["npm", "start"]
+CMD ["nginx", "-g", "daemon off;"]
