--- a/FrontEnd/Dockerfile
+++ b/FrontEnd/Dockerfile
@@ -10,6 +10,6 @@ RUN npm run build
 
 
 FROM nginx:stable-alpine as production-stage
-COPY --from=build-stage /app/dist /usr/share/nginx/html
+COPY --from=build-step /app/dist /usr/share/nginx/html
 EXPOSE 4200
 CMD ["nginx", "-g", "daemon off;"]
