--- a/FrontEnd/Dockerfile
+++ b/FrontEnd/Dockerfile
@@ -12,4 +12,5 @@ RUN npm run build
 FROM nginx:stable-alpine as production-stage
 COPY --from=build-step /app/dist /usr/share/nginx/html
 EXPOSE 4200
+EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
